# NeuroProject

./: CMakeLists.txt  Doxyfile.in  Jupyter.rtf  Please_read_this_file.rtf  README.md
Src/: constant.h  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neurone.cpp  neurone.hpp  ringbuffer.cpp  ringbuffer.hpp
Test/: UnitTest.cpp
googletest/: Makefile  cmake_install.cmake
